# Drue

api/: Cargo.toml  data.db
api/migrations/: 20240909_init.sql
api/src/: main.rs  routes.rs
api/src/controllers/: collections.rs  controller.rs  mod.rs  words.rs
api/src/endpoints/: collections.rs  mod.rs  words.rs
api/src/util/: keys.rs
app/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.vue
app/src/router/: index.ts
app/src/views/: CollectionView.vue  HomeView.vue
