[package]
name = "drue"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"]}
native-tls = "0.2.12"
dotenv = "0.15.0"
bcrypt = "0.15.1"
serde_json = "1.0.128"
reqwest = "0.12.7"
